STM32_FILE/workspace_1.16.0/.metadata/.plugins/org.eclipse.cdt.ui/MX28_Project.build.log
19:37:33 **** Incremental Build of configuration Debug for project MX28_Project ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -DUSE_FULL_LL_DRIVER -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'setMX28GoalPosition':
../Core/Src/main.c:115:5: warning: implicit declaration of function 'HAL_UART_Transmit' [-Wimplicit-function-declaration]
  115 |     HAL_UART_Transmit(&huart3, txPacket, 16, HAL_MAX_DELAY);
      |     ^~~~~~~~~~~~~~~~~
../Core/Src/main.c:115:24: error: 'huart3' undeclared (first use in this function)
  115 |     HAL_UART_Transmit(&huart3, txPacket, 16, HAL_MAX_DELAY);
      |                        ^~~~~~
../Core/Src/main.c:115:24: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:46: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

19:37:34 Build Failed. 2 errors, 1 warnings. (took 748ms)

